fix z-index and make it work with all browsers - wow

--- a/app/assets/stylesheets/pages/note_form.scss
+++ b/app/assets/stylesheets/pages/note_form.scss
@@ -109,6 +109,7 @@
 
 .confidential-issue-scroll {
   position: fixed;
+  z-index: 100;
 }
 
 .confidential-issue-warning {
